ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-site/css/base.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
}

.mc_list {
    list-style: none;
    /* Added by German for media-center.html */
}

.mc_list h3 {
    padding-bottom: 0px;
    /* Added by German for media-center.html */
}

.padding-x {
    /*     padding: 30px 0;    Removed by German for foundation.html */
}



/* Added by German for foundation.html Defect DE2590 */

.rowFix {
    padding-left: 15px;
    padding-right: 15px;
}

.submenu-fix {
    padding-left: 20px;
    padding-right: 20px;
}


/* End of additions by German */


/* Below code has been added by German to fix icon triangle display in drop down lists (DE2594) */

.pstn-reltv select {
    width: 95% !important;
    margin-right: -15px;
}



/* End of additions for Defect DE2594 */

.bottom-buffer {
    padding-bottom: 30px;
    /* Added by German for content-details_RR.html */
}

.bottom-buffer-gray-line {
    margin-bottom: 30px;
    /* Added by German for content-details_RR.html */
}

.full-width-container .width-for-gray-line {
    margin-left: calc(-8.7vw / 2);
    /* Added by German */
    margin-right: calc(-8.7vw / 2);
    /* Added by German */
}

.full-bleed-tiles {
    margin-left: -4.633%;
    /* Added by German for special-content.html */
    margin-right: -4.633%;
    /* Added by German for special-content.html */
}

.right-rail-container .width-for-gray-line {
    margin-left: .1%;
    /* Added by German for content-details_RR.html */
    margin-right: .1%;
    /* Added by German for content-details_RR.html */
}

.gray-margin-top {
    padding-top: 30px;
    /* Added by German for content-details_RR.html */
    background-color: #f8f7f7;
    /* Not used in AEM, remove before Go Live */
}

.more-content {
    margin-bottom: 25px;
}

.gutter2 {
    padding: 0 0 0 50px;
}

.component {
    clear: both;
}

.gutter-top-bottom {
    padding: 30px 0 10px 0;
}

.max-length {
    max-height: 130px;
    overflow: hidden;
    position: relative;
    margin-bottom: 0;
}

.max-length:before {
    position: absolute;
    content: '';
    bottom: -10px;
    left: 0;
    right: 0;
    height: 100px;
    background: rgba(255, 255, 255, 0);
    background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 32%, rgba(255, 255, 255, 1) 68%);
    background: -webkit-gradient(left top, left bottom, color-stop(32%, rgba(255, 255, 255, 0)), color-stop(68%, rgba(255, 255, 255, 1)));
    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 32%, rgba(255, 255, 255, 1) 68%);
    background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 32%, rgba(255, 255, 255, 1) 68%);
    background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 32%, rgba(255, 255, 255, 1) 68%);
    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 32%, rgba(255, 255, 255, 1) 68%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=0);
}

.margin-25 {
    margin: 25px 0;
}

.spl-link {
    color: #00b0b9;
    font-size: 15px;
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: 1.7px;
}

.flex-item {
    flex: 1;
}

.map {
    margin-right: 55px;
}

.map iframe {
    width: 100%;
}

.small-wrapper {
    padding: 5px 0;
}

.address-icons {
    width: 28px;
    height: 28px;
    background: #eee;
    position: relative;
    top: 9px;
    margin-right: 5px;
}

.icons-set {
    padding-bottom: 25px;
}

.small-txt {
    font-size: 16px;
}

.padding-50 {
    padding: 50px 0;
    position: relative;
}

.padding-top-30 {
    padding-top: 30px;
    position: relative;
}

span {
    display: inline-block;
    vertical-align: baseline;
}

ul {
    margin: 0;
}

li {
    padding: 6px 0;
}

hr {
    border: solid 1px #e7e7e7;
}

.content-outer,
.content-inner {
    padding: 10px 0;
    /* Modified by German for content-details_RR.html -> it was 30px 0; */
}

.bold-link {
    font-weight: bold;
    letter-spacing: 1.7px;
    bottom: 0;
    left: 0;
    color: #0097a9;
    text-transform: uppercase;
    /* Added by Naresh for bug fix */
}

.bold-link:hover {
    color: #0097a9;
    /* Added by Simon for Hover fix */
}

.other-news {
    border-left: solid 2px #e7e7e7;
    margin-left: auto;
}

.bleed-box1,
.bleed-box2 {
    color: #fff;
    display: flex;
}

/* Removed by German to fix issue with IE11 

.bleed-box1>div,
.bleed-box2>div {
    flex: 1;
}

*/

.bleed-box1 {
    background-color: #24509a;
}

.content-gutter {
    padding: 35px 80px 35px 60px;
}

.content-col2 {
    padding: 15px 30px 30px 30px;
}

.bleed-box2 {
    background-color: #00b0b9;
}

.btn-primary {
    border-radius: 0;
    -moz-border-radius: 0;
    -webkit-border-radius: 0;
    width: 100%;
    background-color: #0097a9;
    border: solid #0097a9 1px;
    letter-spacing: 1.7px;
    font-weight: bold;
}

.req-app {
    width: 240px;
    position: absolute;
    left: 0;
    bottom: 0;
}

.padding-top {
    padding-top: 60px;
}

.locations-wrapper {
    padding: 60px 0 20px 0;
}

.padding-20 {
    padding: 20px 0;
}

.arrow-link-txt {
    color: #0097a9;
    font-size: 14px;
    position: relative;
    display: block;
}

.arrow-up,
.arrow-right,
.arrow-down,
.arrow-left {
    display: inline-block;
    width: 10px;
    height: 10px;
    border-top: solid #53565a 1px;
    border-right: solid #53565a 1px;
    position: relative;
    margin: 5px;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
}


.custome-dd {
    height: 45px;
    background-color: #86C8BC;
    padding: 1px 0 0 14px;
    /*margin: 10px 0 30px 0;*/
    position: relative;
    width: 100%;
    text-align: left;
    text-transform: uppercase;
    letter-spacing: 1.7px;
    font-size: 15px;
    font-weight: bold;
}

.custome-dd i {
    border-width: 2px;
    margin: 0 20px 0 0;
    top: 1px;
    border-color: #24509a;
    width: 12px;
    height: 12px;
    float: right;
}
/* ... */

